# fastapi-playground

./: .gitignore  pyproject.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py
app/asgi/: asgi_spec.py  client.py  handler.py  http_parser.py  main.py  server.py
app/routers/: common.py
app/schemas/: echo.py  transaction.py
